Added entity and respository for configs
Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>